OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/Territory_Assignments__c.object-meta.xml
<CustomObject>
    <description
  >Territory assignment records that define geographic or organizational territories for routing onboarding processes, communications, and access control. Territories are linked to Territory_Role_Assignment__c records that assign users with specific roles (like Account Manager, Recruiter) to territories. Example: A Territory_Assignments__c record for &quot;Northeast Region&quot; might have Territory_Role_Assignment records linking User &quot;John Manager&quot; with Role__c=&quot;Account Manager&quot; and Primary__c=true. When onboarding communications or processes need to route to the appropriate territory owner, the system queries Territory_Assignments__c and its related Territory_Role_Assignment records to determine recipients. This enables territory-based onboarding workflow routing and ensures dealers are managed by the correct regional teams.</description>
    <label>Territory Assignments</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Territory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>