OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Base_App_OB_Rep__c.field-meta.xml
<CustomField>
    <fullName>Base_App_OB_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base App OB Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsYSoH</relationshipName>
    <type>Lookup</type>
</CustomField>