OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/BB_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>BB_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BB Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments5</relationshipName>
    <type>Lookup</type>
</CustomField>