OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/External_Territory_Assignments_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Territory_Assignments_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Territory Assignments ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>