OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Inside_BB_BDM__c.field-meta.xml
<CustomField>
    <fullName>Inside_BB_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments3</relationshipName>
    <type>Lookup</type>
</CustomField>