OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Inside_COM_BDM__c.field-meta.xml
<CustomField>
    <fullName>Inside_COM_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments8</relationshipName>
    <type>Lookup</type>
</CustomField>