OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Inside_Sales_Specialist_2__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Specialist_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Specialist 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5zi</relationshipName>
    <type>Lookup</type>
</CustomField>