OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Inside_Sales_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5qH</relationshipName>
    <type>Lookup</type>
</CustomField>