OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Onboarding_Rep__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsnsfG</relationshipName>
    <type>Lookup</type>
</CustomField>