OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Onsite_Sales_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Sales_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Sales Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5qq</relationshipName>
    <type>Lookup</type>
</CustomField>