OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Onsite_Sales_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Sales_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Sales Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5qb</relationshipName>
    <type>Lookup</type>
</CustomField>