OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Outside_Director__c.field-meta.xml
<CustomField>
    <fullName>Outside_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments2</relationshipName>
    <type>Lookup</type>
</CustomField>