OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Outside_Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outside_Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5pT</relationshipName>
    <type>Lookup</type>
</CustomField>