OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Outside_Security_BDM__c.field-meta.xml
<CustomField>
    <fullName>Outside_Security_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Security BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments9</relationshipName>
    <type>Lookup</type>
</CustomField>