OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5px</relationshipName>
    <type>Lookup</type>
</CustomField>