OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Sales_Support_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Support Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5q7</relationshipName>
    <type>Lookup</type>
</CustomField>