OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Senior_Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_AssignmentsF5pd</relationshipName>
    <type>Lookup</type>
</CustomField>