OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>