OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Territory_Email__c.field-meta.xml
<CustomField>
    <fullName>Territory_Email__c</fullName>
    <label>Territory Email</label>
    <type>Email</type>
</CustomField>