OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/fields/Territory_Updated__c.field-meta.xml
<CustomField>
    <fullName>Territory_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Updated</label>
    <type>Checkbox</type>
</CustomField>