OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/recordTypes/Infrastructure.recordType-meta.xml
<RecordType>
    <fullName>Infrastructure</fullName>
    <active>true</active>
    <label>Infrastructure</label>
</RecordType>