OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/recordTypes/Program_Acquisitions.recordType-meta.xml
<RecordType>
    <fullName>Program_Acquisitions</fullName>
    <active>true</active>
    <label>Program Acquisitions</label>
</RecordType>