OnboardingV2Minimal/force-app/main/default/objects/Territory_Assignments__c/listViews/Infrastructure_Territory_Assignments.listView-meta.xml
<ListView>
    <fullName>Infrastructure_Territory_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Region__c</columns>
    <columns>Territory__c</columns>
    <columns>Onboarding_Rep__c</columns>
    <columns>Territory_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Territory_Assignments__c.Infrastructure</value>
    </filters>
    <label>Infrastructure Territory Assignments</label>
</ListView>